kubernetes/auth.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth
spec:
  selector:
      matchLabels:
        app: auth
  replicas: 1
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
      - name: auth
        image: leonardobonacci/oogway-auth-service
        imagePullPolicy: Never
        ports:
        - containerPort: 5000
