kubernetes/rabbit.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq
spec:
  selector:
      matchLabels:
        app: taskQueue
        component: rabbitmq
  replicas: 1
  template:
    metadata:
      labels:
        app: taskQueue
        component: rabbitmq
    spec:
      containers:
      - name: rabbitmq
        image: rabbitmq:3.6-management
        ports:
        - containerPort: 5672
          name: queue
          protocol: TCP
        - containerPort: 15672
          name: management
          protocol: TCP
