kubernetes/weather.yaml
apiVersion: v1
kind: Pod
metadata:
  name: weather
spec:
  containers:
  - name: weather
    image: leonardobonacci/oogway-weather-service
    imagePullPolicy: Never
    ports:
      - containerPort: 9999
