kubernetes/auth-svc.yaml
kind: Service
apiVersion: v1
metadata:
  name: auth-service
spec:
  selector:
    app: auth
  ports:
  - protocol: TCP
    port: 5000
  type: NodePort
