kubernetes/auth.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-service
spec:
  selector:
    app: auth
  ports:
  - protocol: TCP
    port: 5000
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth
spec:
  selector:
      matchLabels:
        app: auth
  replicas: 1
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
      - name: auth
        image: leonardobonacci/oogway-auth-service
        imagePullPolicy: Never
        ports:
        - containerPort: 5000
        volumeMounts:
        - name: hostvol
          mountPath: /ubuntu1
      volumes:
        - name: hostvol
          hostPath:
            path: /home/docker
