kubernetes/doorway-svc.yaml
kind: Service
apiVersion: v1
metadata:
  name: doorway-service
spec:
  selector:
    app: doorway
  ports:
  - port: 80
    targetPort: 3333
  type: NodePort
