kubernetes/elastic.yml
apiVersion: v1
kind: Service
metadata:
  name: es
spec:
  selector:
    component: elasticsearch
  ports:
  - name: http
    port: 9200
  - name: transport
    port: 9300
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: es
spec:
  selector:
      matchLabels:
        component: elasticsearch
  replicas: 1
  template:
    metadata:
      labels:
        component: elasticsearch
    spec:
      containers:
      - name: es
        image: docker.elastic.co/elasticsearch/elasticsearch:5.5.3
        ports:
        - containerPort: 9200
          name: http
        - containerPort: 9300
          name: transport
        livenessProbe:
          tcpSocket:
            port: transport
          initialDelaySeconds: 20
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /_cluster/health
            port: http
          initialDelaySeconds: 20
          timeoutSeconds: 5
        volumeMounts:
        - name: storage
          mountPath: /data
      volumes:
          - emptyDir:
              medium: ""
            name: storage
