kubernetes/es-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: es
spec:
  selector:
    component: elasticsearch
    role: data
  ports:
  - name: http
    port: 9200
# for testing purposes
#    port: 80
#    targetPort: 9200
  - name: transport
    port: 9300
