kubernetes/job-svc.yaml
kind: Service
apiVersion: v1
metadata:
  name: job-service
spec:
  selector:
    app: job
  ports:
  - protocol: TCP
    port: 8765
  type: NodePort
