kubernetes/kafka.yaml
kind: Service
apiVersion: v1
metadata:
  name: kafka
spec:
  ports:
  - port: 9092
    targetPort: 9092
---
kind: Endpoints
apiVersion: v1
metadata:
  name: kafka
subsets:
  - addresses:
    - ip: 123.45.678.90
    ports:
      - port: 9092
