kubernetes/lumberjack-svc.yaml
kind: Service
apiVersion: v1
metadata:
  name: lumberjack-service
spec:
  selector:
    app: lumberjack
  ports:
  - protocol: TCP
    port: 11235
  type: NodePort
