kubernetes/oracle.yaml
apiVersion: v1
kind: Service
metadata:
  name: oracle-service
spec:
  selector:
    app: oracle
  ports:
  - protocol: TCP
    port: 4444
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oracle
spec:
  selector:
      matchLabels:
        app: oracle
  replicas: 1
  template:
    metadata:
      labels:
        app: oracle
    spec:
      containers:
        - name: oracle
          image: leonardobonacci/oogway-oracle-service
          imagePullPolicy: Never
          ports:
            - containerPort: 4444
          volumeMounts:
          - name: app-config
            mountPath: /config
      volumes:
      - name: app-config
        configMap:
          name: oracle
