kubernetes/rabbit-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
spec:
  selector:
    app: taskQueue
    component: rabbitmq
  ports:
  - name: queue
    port: 5672
  - name: management    
    port: 15672
  type: NodePort
