kubernetes/sannyas.yaml
apiVersion: v1
kind: Service
metadata:
  name: sannyas-service
spec:
  selector:
    app: sannyas
  ports:
  - port: 2222
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sannyas
spec:
  selector:
      matchLabels:
        app: sannyas
  replicas: 1
  template:
    metadata:
      labels:
        app: sannyas
        fluentd-log-format: "spring-boot"
    spec:
      containers:
      - name: doorway
        image: leonardobonacci/oogway-sannyas-service
        imagePullPolicy: Never
        ports:
        - containerPort: 2222
        volumeMounts:
        - name: app-config
          mountPath: /config
      volumes:
        - name: app-config
          configMap:
            name: sannyas
