kubernetes/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: oogway-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  backend:
    serviceName: default-http-backend
    servicePort: 80
  rules:
  - host: talk.to.oogway
    http:
      paths:
      - path: /
        backend:
          serviceName: doorway-service
          servicePort: 80

# for testing purposes
#  - host: for.search
#    http:
#      paths:
#      - path: /
#        backend:
#          serviceName: es
#          servicePort: 80
